# slicer

./: .gitignore  Cargo.toml
src/: bsp.rs  geometry.rs  main.rs  merge.rs  mesh.rs  ssp.rs  stl.rs
test_data/: cube_bin.stl  cube_scad.stl  cube_text.stl
test_data/2color/nested_inner_outer/: 1.stl
test_data/2color/nesting/: 0.stl  nesting.scad
