# slicer: Better slicing for multi-color extrusion.
# Copyright (C) 2017  Terrence Cole
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
[package]
name = "slicer"
version = "0.1.0"
authors = ["Terrence Cole"]

[dependencies]
alga = "0.5"
approx = "^0.1.1"
byteorder = "^1.0"
clap = "*"
cpuprofiler = "0.0.3"
error-chain = "0.10.0"
itertools = "0.6.0"
nalgebra = "0.11"
nom = "^2.0"
